# fswatcher

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
fswatcher/: FileSystemHandler.py  FileSystemHandlerConfig.py  FileSystemHandlerEvent.py  __init__.py  __main__.py
scripts/: fswatcher.config  run_docker_container.sh  run_fs_watcher_as_python.sh  stop_docker_container.sh  update_docker_container.sh
